--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_block-list.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_block-list.scss
@@ -116,7 +116,9 @@
     }
   }
   > a, > label, select {
+    transition: $input-transition-base;
     &:hover {
+      transition: $input-transition-hover;
       background: $background-hover;
     }
   }
