--- a/site/src/main/webapp/resources/tornadofaces-tornado/tornadofaces.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/tornadofaces.scss
@@ -53,7 +53,7 @@
   position: relative;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.32);
   background: #fff;
-  padding: $global-padding;
+  padding: 1rem 5%; //todo: $content-outer-padding ellerno
   h1 {
     font-size: 2.2rem;
     font-weight: 700;
@@ -103,7 +103,7 @@
 }
 
 span.highlight {
-  background-color: orange;
+  background-color: #E2F5FF; //todo: $highlight-color
 }
 
 form label {
