--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_spacing.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_spacing.scss
@@ -48,3 +48,10 @@ $padding-large: ($global-padding * 1.5);
 .l-padding-large { padding-left: $padding-large; }
 .lr-padding-large { padding: 0 $padding-large; }
 .tb-padding-large { padding: $padding-large 0; }
+
+@include breakpoint(small only) {
+  .small-padding-0 {padding: 0;}
+}
+@include breakpoint(medium only) {
+  .medium-padding-0 {padding: 0;}
+}
