--- a/site/src/main/webapp/resources/tornadofaces-tornado/_settings.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/_settings.scss
@@ -27,6 +27,7 @@ $body-font-style: normal !default;
 $body-antialiased: true !default;
 $default-border: 1px solid #f0f0f0 !default;
 $default-dotted-border: 1px dotted #CACACA !default;
+$default-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.26);
 
 // Application Colors
 $primary-color: #3fa2d8 !default;
@@ -178,7 +179,7 @@ $block-grid-max-size: 6 !default;
 
 $accordion-border: none !default;
 $accordion-item-border: none !default;
-$accordion-item-shadow: 0px 1px 4px rgba(0, 0, 0, 0.32) !default; //Todo: variable
+$accordion-item-shadow: $default-box-shadow !default; //Todo: variable
 
 $accordion-title-font-size: 1.3rem;
 $accordion-title-background: #fff !default;
