--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_grid.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_grid.scss
@@ -132,7 +132,7 @@
 */
 @mixin grid-collapse($collapse: true) {
   @if ($collapse) {
-    padding: 0;
+//    padding: 0;
   }
 }
 
@@ -252,7 +252,7 @@
 @mixin grid-content($size: expand, $offset: null, $order: null) {
   // Content blocks are not flex items and have padding
   display: block;
-  padding: 0 $block-padding;
+//  padding: 0 $block-padding;
 
   // Add scrolling with inertia
   //overflow-y: auto; //Todo: To keep or not to keep?
@@ -274,7 +274,7 @@
   list-style-type: none;
 
   > li, > div, > section {
-    padding: 0 1rem 1rem;
+//    padding: 0;
     flex: 0 0 percentage(1 / $up);
   }
 }
@@ -364,7 +364,7 @@
   @include grid-content;
 
   &.padding {
-    padding: 0;
+//    padding: 0;
   }
 }
 
