--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_table.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_table.scss
@@ -5,7 +5,7 @@ $default-cell-padding: 1rem;
 $default-table-border: $default-border;
 $default-table-border-dotted: $default-dotted-border; //todo: make global default border
 
-$table-zebra-background: #EFF6FA;
+$table-zebra-background: #F7FAFC;
 $table-selected-row-background: #C4EAFF;
 
 $table-compact-padding: 0.5rem;
@@ -175,7 +175,7 @@ th {
 .large-table-reflow { @include table-reflow; }
 
 @include breakpoint(large down) {
-  .small-table-reflow { @include table-reflow; }
+  .medium-table-reflow { @include table-reflow; }
 }
 @include breakpoint(small only) {
   .small-table-reflow { @include table-reflow; }
