--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_table.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_table.scss
@@ -5,7 +5,7 @@ $default-cell-padding: 1rem;
 $default-table-border: $default-border;
 $default-table-border-dotted: $default-dotted-border; //todo: make global default border
 
-$table-zebra-background: #F7FAFC;
+$table-zebra-background: #f3f3f3;
 $table-selected-row-background: #C4EAFF;
 
 $table-compact-padding: 0.5rem;
