--- a/site/src/main/webapp/resources/tornadofaces-tornado/theme.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/theme.scss
@@ -42,4 +42,5 @@ $foundation-version: "1.0.3";
 "components/reveal",
 "components/breadcrumbs",
 "components/spacing",
+"components/message",
 "tornadofaces";
