--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_typography.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_typography.scss
@@ -207,7 +207,10 @@ $acronym-underline: 1px dotted #ddd !default;
     }
   }
 
-  h1 { font-size: $h1-font-size - $h1-font-reduction; }
+  h1 {
+    font-size: $h1-font-size - $h1-font-reduction;
+    font-weight: $h1-font-weight;
+  }
   h2 { font-size: $h2-font-size - $h2-font-reduction; }
   h3 { font-size: $h3-font-size - $h3-font-reduction; }
   h4 { font-size: $h4-font-size - $h4-font-reduction; }
