--- a/site/src/main/webapp/resources/tornadofaces-tornado/_settings.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/_settings.scss
@@ -296,7 +296,7 @@ $thumbnail-shadow: 0 3px 15px rgba(black, 0.25) !default;
 // 13. Forms
 // - - - - - - - - - - - - - - -
 
-$input-placeholder-color: #b9b9b9;
+$input-placeholder-color: #808080;
 
 // Basic transitions
 
