--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_accordion.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_accordion.scss
@@ -32,7 +32,7 @@
   }
   > i {
     vertical-align: middle;
-    font-size: 2.1em;
+    font-size: $accordion-title-icon-size;
     margin-right: 0.6rem;
     display: inline-block;
     margin-top: -0.2em;
