--- a/site/src/main/webapp/resources/tornadofaces-tornado/_global.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/_global.scss
@@ -35,7 +35,7 @@ $font-weight-bold: 600 !default;
 // We use these to control various global styles
 $body-background: #fff !default;
 $body-font-color: #222 !default;
-$body-font-family: "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !default;
+$body-font-family: "Roboto Condensed", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !default;
 $body-font-weight: $font-weight-normal !default;
 $body-font-style: normal !default;
 $body-antialiased: true;
