--- a/site/src/main/webapp/resources/tornadofaces-tornado/tornadofaces.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/tornadofaces.scss
@@ -67,7 +67,7 @@
 #main-container {
   padding: 0;
   flex: 1;
-  overflow-y: auto;
+  overflow-y: scroll;
   position: relative;
 }
 .main-wrapper {
