--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_sidemenu.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_sidemenu.scss
@@ -183,7 +183,7 @@ $sidemenu-popuot-background: #1e1e1e;
 .sidemenu-subitems { //applies to 2nd level only
   font-size: .9rem;
   margin: 0;
-  padding: 1rem; // TODO: FIX setting!
+  padding: 1rem 1.4rem; // TODO: FIX setting!
   display: block;
   height: auto;
   min-width: $sidemenu-min-width;
