--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_message.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_message.scss
@@ -24,6 +24,7 @@ $message-alert-color: #fff;
   padding: 1.3rem;
   margin-bottom: 0.5rem;
   box-shadow: $default-box-shadow;
+  border: $default-border;
   font-size: .9rem;
   border-radius: $message-radius;
   .close-button {color: inherit;}
