--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_accordion.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_accordion.scss
@@ -24,7 +24,10 @@
   position: relative;
 
   &:hover {
-//    background: $background-hover;
+    background: $background-hover;
+  }
+  &.is-active:hover {
+    background: $background;
   }
 
   > .spinner {
@@ -48,7 +51,6 @@
     position: absolute;
     right: 2rem;
     font-size: 1.9rem;
-    top: 1.2em;
     color: $primary-color;
     transition: transform 0.32s;
   }
