--- a/site/src/main/webapp/resources/tornadofaces-tornado/_settings.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/_settings.scss
@@ -25,7 +25,7 @@ $body-font-family: "Roboto Condensed", "Helvetica Neue", "Helvetica", Helvetica,
 $body-font-weight: $font-weight-normal !default;
 $body-font-style: normal !default;
 $body-antialiased: true !default;
-$default-border: 1px solid #eee !default;
+$default-border: 1px solid rgba(0, 0, 0, 0.08) !default;
 $default-dotted-border: 1px dotted #CACACA !default;
 //$default-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.26);
 $default-box-shadow: -2px 2px 0px rgba(0, 0, 0, 0.17);
@@ -256,7 +256,7 @@ $button-sizes: (
         medium: 1,
         large: 1.3,
 ) !default;
-$button-font-size: 0.9rem !default;
+$button-font-size: 1rem !default;
 $button-opacity-disabled: 0.5 !default;
 $button-tag-selector: true !default;
 
