--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_sidemenu.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_sidemenu.scss
@@ -99,6 +99,8 @@ $sidemenu-popuot-background: #1e1e1e;
   z-index: 999 !important;
   input { box-sizing: border-box; }
   ul { //reset
+    display: flex;
+    flex-direction: column;
     margin: 0;
     box-sizing: border-box;
     >li {list-style: none;}
@@ -192,12 +194,17 @@ $sidemenu-popuot-background: #1e1e1e;
   padding: 0.5rem 1.6rem 1rem; // TODO: FIX setting!
   display: block;
   height: auto;
+  flex-direction: row !important;
+  flex-wrap: wrap;
   min-width: $sidemenu-min-width;
   max-width: $sidemenu-max-width;
   &:after {content: ''; display: block; clear: both;}
   &> li {
-    float: left;
-    width: 50%;
+    //float: left;
+    //width: 50%;
+    min-width: 50%;
+    flex: 1 1 auto;
+    white-space: nowrap;
     &> a {
       word-wrap: break-word;
       transition: background 0.5s;
